--- a/acc91.12/BiGAN_anomaly_detection_acc91.12%.ipynb
+++ b/acc91.12/BiGAN_anomaly_detection_acc91.12%.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notebook tend to:\n",
-    "1. train generator 5 times when training discriminator 1 time;\n",
+    "## This notebook tends to:\n",
+    "1. train generator and encoder 5 times after training discriminator for once; It helps generator  and encoder to catch up the discriminator.\n",
     "\n",
-    "It seems the accuracy has improved a little. The final accuracy is 88.10%."
+    "It seems the accuracy has improved a little. The final accuracy is 91.12%."
    ]
   },
   {
@@ -946,27 +946,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision = 0.8727372840525844\n",
-      "recall = 0.8727372840525844\n",
+      "Precision = 0.8727372840525844\n",
+      "Recall = 0.9880776124055171\n",
       "Accuracy = 0.9111958836053939\n",
-      "F1 = 0.8727372840525843\n"
+      "F1 = 0.9268328338571742\n"
      ]
     }
    ],
    "source": [
     "Precision = tp / (tp + fp)\n",
-    "Recall = tp / (tp + fp)\n",
+    "Recall = tp / (tp + fn)\n",
     "Accuracy = (tp + tn) / (tp + tn + fp + fn)\n",
     "F1 = 2 * Precision * Recall / (Precision + Recall)\n",
-    "print(f\"precision = {Precision}\")\n",
-    "print(f\"recall = {Recall}\")\n",
+    "print(f\"Precision = {Precision}\")\n",
+    "print(f\"Recall = {Recall}\")\n",
     "print(f\"Accuracy = {Accuracy}\")\n",
     "print(f\"F1 = {F1}\")"
    ]
